# rock-chip-triton-backend

./: CMakeLists.txt  README.md  go_build.sh  go_install.sh  rk_backend_tester.py
cmake/: rock-chip_BackendConfig.cmake.in
rk_stat/: CMakeLists.txt  main.cc  model.rknn
server/: data_compressor_test  multi_server  restarttriton.sh  simple  start_triton.sh  tritonserver
server/model_repository/rockchip/: config.pbtxt
src/: recommended.cc  rock-chip_backend.cc  rock-chip_backend.h  tensorrt.cc
